# lighthugger

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  compile_glsl.py  compile_shaders.sh  format.sh  readme.md  renderdoc.cap
src/: allocations.cpp  allocations.h  dds.h  debugging.cpp  debugging.h  descriptor_set.cpp  descriptor_set.h  ext_lib_impls.cpp  frame_resources.cpp  frame_resources.h  image_loading.cpp  image_loading.h  input.cpp  input.h  main.cpp  mesh_loading.cpp  mesh_loading.h  pch.h  pipelines.cpp  pipelines.h  projection.h  rendering.cpp  rendering.h  shared_cpu_gpu.h  simpler_vulkan_sync_impl.cpp  sync.cpp  sync.h  util.cpp  util.h
src/allocations/: base.cpp  base.h  image_with_view.cpp  image_with_view.h  persistently_mapped.cpp  persistently_mapped.h  staging.cpp  staging.h
src/resources/: _json.h  bounding_sphere.h  dds.h  fs_cache.h  image_loading.cpp  image_loading.h  ktx2.h  mesh_loading.cpp  mesh_loading.h  meshlets.cpp  meshlets.h
src/shaders/: alpha_clip.hlsl  bindings.hlsl  blit_srgb.hlsl  calc_bounding_sphere.hlsl  clear_pretty.hlsl  copy_quantized_positions.hlsl  cull_instances.comp  cull_instances.glsl  debug.hlsl  display_transform.comp  display_transform.glsl  display_transform.hlsl  expand_meshlets.comp  fullscreen_tri.hlsl  rasterization.glsl  read_depth.hlsl  render_geometry.comp  render_geometry.hlsl  setup.hlsl  shadows.hlsl  write_draw_calls.comp  write_draw_calls.hlsl
src/shaders/common/: bindings.glsl  bindings.h  bindings.hlsl  buffer_references.glsl  culling.glsl  debug.glsl  debug.hlsl  geometry.hlsl  hlsl4glsl.glsl  hlsl4glsl.h  loading.hlsl  matrices.glsl  matrices.hlsl  pbr.glsl  pbr.hlsl  prefix_sum.glsl  util.glsl  vbuffer.glsl  vbuffer.hlsl  vsm.glsl
src/shaders/compute/: copy_quantized_positions.glsl  copy_quantized_positions.hlsl  generate_shadow_matrices.glsl  generate_shadow_matrices.hlsl  read_depth.glsl  read_depth.hlsl  reset_buffers.glsl
src/shaders/inputs/: pos.hlsl  pos_uv.hlsl
src/shaders/visbuffer_rasterization/: alpha_clip.hlsl  opaque.hlsl
